# MassMailer

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli1.md  monopoli2.md  sekvenssikaavio1.md  sekvenssikaavio2.md
src/: app.py  build.py  config.py  index.py  parser.py  state.py  text_parser.py
src/database/: db_connection.py  init_db.py  message_repository.py
src/google_api/: authorizer.py  gmail_service.py
src/mail/: gmail_service.py
src/oauth/: authorizer.py
src/repositories/: message_repository.py
src/tests/: app_test.py  authorizer_test.py  gmail_service_test.py  message_repository_test.py  parser_test.py
src/tests/integration/: app_test.py
src/tests/unit/: authorizer_test.py  gmail_service_test.py  message_repository_test.py  parser_test.py
src/ui/: loginout.py  message_field.py  preview.py  selector.py  tbl.py  ui.py
src/ui/components/: loginout.py  message_field.py  preview.py  selector.py  tbl.py
src/utils/: text_parser.py
